cmake_minimum_required(VERSION 3.12)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}/modules/Animation)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/modules/Animation)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}/modules/Animation)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/modules/Animation)

FILE(GLOB SOURCE_FILES *.*)
add_library(Animation SHARED ${SOURCE_FILES})
target_compile_definitions(Animation PRIVATE -DANIMATION_EXPORT)

target_link_libraries(Animation 
	XE
	ozz_base
	ozz_animation
	)